--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "firebase": "^10.9.0",
     "formik": "^2.4.5",
     "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "styled-components": "^6.1.8",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
